assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');

/* General Styling */
body {
    background: url("../images/sport-background.jpg") no-repeat center center/cover;
    font-family: "play", Arial, Helvetica, sans-serif;
    color: black;
    min-height: 100vh;
}

h1 {
    text-align: center;
    color: white;
    font-size: 50px;
}

p {
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 10px;
}

/* Start Screen styling */
.start-screen {
    width: 50%;
    margin-left: 25%;
    margin-right: 25%;
    padding-top: 5%;
    text-align: center;
    border-radius: 20px;
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.start-screen.active {
    display: none;
}

.open-quiz{
    background-color: white;
    color: black;
    border-radius: 20px;
    width: 25%;
    margin-bottom: 5%;
    margin-top: 5%;
    height: 40px;
    border-color: white;
    font-size: 20px;
}

.open-quiz:hover {
    background-color: black;
    color: white;
    transition: 1s;
}

/* Quiz rules section stylings*/
.quiz-rules {
    width: 40%;
    background-color: white;
    border-radius: 25px;
    flex-direction: column;
    margin-right: 30%;
    margin-left: 30%;
    margin-top: -10%;
    display: flex;
    display: none;
}

.quiz-rules.active {
    display: flex;
    pointer-events: auto;
    margin-right: 30%;
    margin-left: 30%;
    margin-top: 5%;
}

.quiz-rules h2 {
    text-align: center;
}

.button-align {
    display: inline-block;
    padding-left: 90px;
    
}
.start-quiz {
    background-color: white;
    color: black;
    width: 30%;
    border-radius: 20px;
    margin-left: 20px;
    margin-bottom: 10px;
    margin-right: 10px;
    height: 30px;
}

.exit-quiz {
    background-color: white;
    color: black;
    width: 30%;
    border-radius: 20px;
    margin-bottom: 10px;
    margin-right: 10px;
    height: 30px;
}

.start-quiz:hover {
    background-color: black;
    color: white;
    transition: 1s;
}

.exit-quiz:hover {
    background-color: black;
    color: white;
    transition: 1s;
}


/* Quiz Area Styling */
.quiz-area {
    width: 40%;
    background-color: white;
    border-radius: 20px;
    margin-left: 30%;
    margin-right: 30%;
    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
    display: none;
}

.quiz-area.active {
    display: inline-block;
}
.quiz-area header {
    background-color: rgba(160, 160, 160, 0.859);
    padding-left: 5%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 50px;
    text-align: left;
    color: white;
    font-size: 20px;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}

/* Quiz area timer stylings */
.timer {
    justify-content: space-between;
    align-items: center;
    display: flex;
    background-color: whitesmoke;
    margin-right: 5%;
    color: black;
    border-radius: 5px;
    width: 150px;
    padding: 3px;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;

}

.time-left {
    font-size: 17px;
    font-weight: 400;
    padding-left:2px;
}

.time-seconds {
    font-size: 17px;
    font-weight: 400;
    padding-right: 5px;
    background-color: rgba(106, 106, 106, 0.834) ;
    color: white;
    margin-right: 3px;
    border-radius: 5px;
    text-align: center;
    width: 40px;
}

/* Quiz area question and answer section styling*/
.questions {
    padding: 25px 10px 20px 25px;
    text-align: center;
    font-weight: 600;
    font-size: 20px;
}

.answer-options {
    padding: 25px 10px 20px 25px;
    display: block;
}

.option {
    background-color: rgba(202, 202, 202, 0.922);
    border: 1px solid black;
    border-radius: 10px;
    padding: 5px 15px;
    margin-bottom: 10px;
    align-items: center;
    display: flex;
    cursor: pointer;
    font-size: 17px;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 5px;
    margin-right: 10px;
}

.option:hover {
    background-color: black;
    color: whitesmoke;
    transition: 0.3s ease;
}

/* Quiz area footer stylings */
.next-ques {
    background-color: whitesmoke;
    border-radius: 10px;
    border: 1px solid black;
    color: black;
    height: 25px;
    align-items: center;
    margin-bottom: 10px;
    margin-left: 150px;
    margin-top: 10px;
    width: 150px;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    }

.next-ques:hover {
        background-color: black;
        color: white;
        transition: 0.3s;
    }

.quiz-area footer {
    background-color: rgba(160, 160, 160, 0.859);
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: baseline;
}

.current-ques {
    margin-right: -15px;
    margin-left: 20px;
}

footer p {
    padding: 10px;
    font-size: 15px;
}

/* Results box styling */
.results {
    width: 30%;
    background-color: white;
    margin-left: 35%;
    margin-right: 35%;
    border-radius: 20px;
    display: inline-block;
}

.results footer {
    background-color: rgba(202, 202, 202, 0.922);
    display: flex;
}

